--- a/templates/default/ubuntu-preseed.cfg.erb
+++ b/templates/default/ubuntu-preseed.cfg.erb
@@ -65,6 +65,6 @@ d-i debian-installer/exit/halt boolean <%= @halt %>
 #d-i debian-installer/exit/poweroff boolean true
 <% if @bootstrap -%>
 d-i preseed/late_command string in-target wget --no-proxy -O /tmp/chef-bootstrap \
-  http://<%= node['ipaddress'] %>/<%= @id %>-chef-bootstrap ;\
+  http://<%= node['tfly-pxe']['tftp_server'] %>/<%= @id %>-chef-bootstrap ;\
   chroot /target /bin/bash /tmp/chef-bootstrap
 <% end -%>
